--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "types": [
       "vite/client",
       "vite-plugin-vue-layouts/client",
-      "vite-plugin-pages/client",
-      "vite-plugin-pwa/client"
+      "vite-plugin-pages/client"
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
